Prevent clipping credits box
When the credit box gets long, it is clipped at the bottom on small
screens. This is caused by an overflow hidden container that was
placed there to prevent the display of horizontal scroll bars while
the unmute animation is playing.

Not able to reproduce horizontal overflow in Chrome, FF, Safari and
mobile Safari while animation is playing. Might have been an IE11
issue, which we do not support anymore.

REDMINE-19484

--- a/entry_types/scrolled/package/src/widgets/defaultNavigation/DefaultNavigation.module.css
+++ b/entry_types/scrolled/package/src/widgets/defaultNavigation/DefaultNavigation.module.css
@@ -53,18 +53,8 @@
 .contextIcons {
   position: absolute;
   top: 0px;
-  right: 0px;
+  right: 12px;
   display: flex;
-  /*
-    Hide overflow to prevent animated circle of
-    ToggleMuteButton.module.css from causing horizontal scroll bars
-    from appearing. Add extra padding to make sure circle is visible
-    outside of navigation bar. Disable pointer events to ensure other
-    elements below are still clickable.
-  */
-  overflow: hidden;
-  padding: 0px 12px 100% 300px;
-  pointer-events: none;
 }
 
 .contextIcons > * {
